chat z-index fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -151,6 +151,7 @@ body {
 	color: #666;
 	font-size: 10px;
 }
+
 .chat__users #users {
 	display: inline-block;
 }
@@ -176,7 +177,7 @@ body {
 	display: inline-block;
 	max-width: 240px;
 	position: absolute;
-	z-index: 2;
+	z-index: 9;
 	bottom: 70px;
 	left: 0;
 	right: 0;
@@ -264,7 +265,7 @@ body {
 .sharetools {
   padding: 1em;
   position: absolute;
-  z-index: 99;
+  z-index: 8;
   top: 50%;
   transform: translateY(-50%);
   right: -10px;
